feat: update Welcome and Dashboard components; add Navbar and new assets; enhance styling with additional fonts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Urbanist:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Urbanist:wght@400;600;700&family=Roboto+Flex:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- ...existing code... -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Urbanist:wght@400;600;700&family=Roboto+Flex:wght@400;500;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- ...existing code... -->
     <title>metana-assestment</title>
   </head>
   <body>
